--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "lodash": "4.17.21",
     "path-browserify": "1.0.1",
     "react": "18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
     "react-form-stepper": "^2.0.3",
     "react-hook-form": "7.30.0",
