--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "redux": "4.2.0",
     "redux-thunk": "2.4.1",
     "tslib": "2.4.0",
-    "uuid": "8.3.2"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@testing-library/react": "13.3.0",
