--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "path-browserify": "1.0.1",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.3",
+    "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
     "react-form-stepper": "^2.0.3",
     "react-hook-form": "7.30.0",
@@ -93,6 +94,7 @@
     "react-redux": "8.0.2",
     "react-redux-loading-bar": "5.0.4",
     "react-router-dom": "6.3.0",
+    "react-time-picker": "^5.2.0",
     "react-toastify": "9.0.8",
     "react-transition-group": "4.4.5",
     "reactstrap": "9.1.4",
