--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@fortawesome/fontawesome-svg-core": "6.2.0",
     "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@fortawesome/react-fontawesome": "0.2.0",
+    "@react-spring/web": "^9.7.1",
     "@reduxjs/toolkit": "1.8.5",
     "axios": "0.27.2",
     "bootstrap": "5.2.0",
@@ -147,6 +148,7 @@
     "prettier-plugin-java": "1.6.2",
     "prettier-plugin-packagejson": "2.2.18",
     "react-infinite-scroll-component": "6.1.0",
+    "react-spring-3d-carousel": "^1.3.4",
     "redux-mock-store": "1.5.4",
     "rimraf": "3.0.2",
     "sass": "1.54.8",
