--- a/package.json
+++ b/package.json
@@ -97,7 +97,6 @@
     "react-router-dom": "6.3.0",
     "react-time-picker": "^5.2.0",
     "react-toastify": "9.0.8",
-    "react-transition-group": "4.4.5",
     "reactstrap": "9.1.4",
     "redux": "4.2.0",
     "redux-thunk": "2.4.1",
@@ -112,6 +111,7 @@
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "@types/react-redux": "7.1.24",
+    "@types/react-transition-group": "^4.4.5",
     "@types/redux": "3.6.31",
     "@types/webpack-env": "1.18.0",
     "@typescript-eslint/eslint-plugin": "5.36.1",
@@ -149,6 +149,7 @@
     "prettier-plugin-packagejson": "2.2.18",
     "react-infinite-scroll-component": "6.1.0",
     "react-spring-3d-carousel": "^1.3.4",
+    "react-transition-group": "^4.4.5",
     "redux-mock-store": "1.5.4",
     "rimraf": "3.0.2",
     "sass": "1.54.8",
